Clarify the console error when a PNG icon is not available for add to homescreen.

BUG=761682

Change-Id: I6eff6704ad19ddf9d3aa5b2167af12d9e643b044
Reviewed-on: https://chromium-review.googlesource.com/745684
Reviewed-by: Ben Wells <benwells@chromium.org>
Commit-Queue: Dominick Ng <dominickn@chromium.org>
Cr-Commit-Position: refs/heads/master@{#512731}
Former-commit-id: 388128a9765480d55f8198e2db9a798bbbbe30e9